--- a/index.html
+++ b/index.html
@@ -188,22 +188,8 @@
 						</div>
 					</div>
 					
-
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>Sql Server</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-							    <span>80%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 		</section>
- <section class="ftco-section ftco-project" id="projects-section">
+					<section class="ftco-section ftco-project" id="projects-section">
 			<div class="container">
 				<div class="row justify-content-center pb-5">
 			  <div class="col-md-12 heading-section text-center ftco-animate">
@@ -236,7 +222,7 @@
 						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-1.jpg);">
 							<div class="overlay"></div>
 							<div class="text text-center p-4">
-								<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+								<h3><a href="https://ahmedabdelbaset902.github.io/PRODUCT-MANGEMENT-SYSTEM/">PRODUCT-MANGEMENT-SYSTEM</a></h3>
 								<span>Web Design</span>
 							</div>
 						</div>
@@ -244,7 +230,7 @@
 						<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-6.jpg);">
 							<div class="overlay"></div>
 							<div class="text text-center p-4">
-								<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+								<h3><a href="https://ahmedabdelbaset902.github.io/Restaurant/">Restaurant</a></h3>
 								<span>Web Design</span>
 							</div>
 						</div>
@@ -255,7 +241,7 @@
 								<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-2.jpg);">
 									<div class="overlay"></div>
 									<div class="text text-center p-4">
-										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<h3><a href="https://ahmedabdelbaset902.github.io/Online-Coach/">Online-Coach</a></h3>
 										<span>Web Design</span>
 									</div>
 								</div>
@@ -264,7 +250,7 @@
 								<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/project-3.jpg);">
 									<div class="overlay"></div>
 									<div class="text text-center p-4">
-										<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+										<h3><a href="https://ahmedabdelbaset902.github.io/Online-Courses/">Online-Courses</a></h3>
 										<span>Web Design</span>
 									</div>
 								</div>
@@ -274,6 +260,88 @@
 				</div>
 			</div>
 		</section>
+	
+	
+
+  
+
+    <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+      <div class="container">
+      	<div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 heading-section text-center ftco-animate">
+            <h1 class="big big-2">Contact</h1>
+            <h2 class="mb-4">Contact Me</h2>
+          </div>
+        </div>
+
+        <div class="row d-flex contact-info mb-5">
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-map-signs"></span>
+          		</div>
+          		<h3 class="mb-4">Address</h3>
+	            <p>Tanta</p>
+	          </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-phone2"></span>
+          		</div>
+          		<h3 class="mb-4">Contact Number</h3>
+	            <p><a href="tel:01092404102">01092404102</a></p>
+	          </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-paper-plane"></span>
+          		</div>
+          		<h3 class="mb-4">Email Address</h3>
+	            <p><a href="ahmedabdelbast902@ygmail.com" type="Email">ahmedabdelbast902@gmail.com</a></p>
+	          </div>
+          </div>
+          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-globe"></span>
+          		</div>
+          		<h3 class="mb-4">Website</h3>
+	            <p><a href="index.html">myPortfolio</a></p>
+	          </div>
+          </div>
+        </div>
+
+        <div class="row no-gutters block-9">
+          <div class="col-md-6 order-md-last d-flex">
+            <form action="#" class="bg-light p-4 p-md-5 contact-form">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Name">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Your Email">
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Subject">
+              </div>
+              <div class="form-group">
+                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+              </div>
+              <div class="form-group">
+                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
+              </div>
+            </form>
+          
+          </div>
+
+          <div class="col-md-6 d-flex" >
+          	<div class="img" style="background-image: url(images/WhatsApp\ Image\ 2024-09-18\ at\ 00.22.53_08d24acc.jpg);width: 380px; "></div>
+          </div>
+        </div>
+      </div>
+    </section>
+		
 
 
   
